--- a/css/style.css
+++ b/css/style.css
@@ -3,23 +3,91 @@ margin: 0;
 padding: 0;
 }
 .top{
-    background-image: url('../img/background-img.jpg');
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+body{
+    /* background-image: url('../img/background-img.jpg'); */
+    background-image: url('../img/ryunosuke-kikuno-FKqxZ58bVjU-unsplash.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 50vh;
+    height: 100vh;
+    
 }
 .header{
     text-align: center;
-    font-size: 68px;
-    color: white;
-    padding-top: 120px;
+    font-size: 38px;
+    color: #008cff;
+    
 }
 .newBook{
     height: 40px;
     width: 100px;
     padding: 10px;
     border: none;
-    background-color: white;
+    color: white;
+    background-color: #048af7;
     border-radius: 8px;
+    margin: 10px 20px;
 }
+.modal{
+    display:none;
+    justify-content: center;
+    align-items: center;
+    margin: 50px auto;
+    width: 300px;
+    height: 380px;
+    border-radius: 8px;
+    background-color: #048af7;
+    z-index: 1;
+
+}
+form{
+    display: flex;
+    flex-direction: column;
+    padding: 10px 20px;
+}
+.form-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.heading{
+    margin: 10px;
+    color: rgb(255, 255, 255);
+}
+.close{
+    background-color: transparent;
+    border: none;
+    padding: 10px;
+}
+.close:hover{
+    background-color: red;
+}
+label{
+    padding: 10px 0;
+    color: white;
+    font-weight: 900;
+}
+input[type="text"],
+input[type="number"] {
+    width: 200px;
+    height: 30px;
+    border: none;
+    border-radius: 4px; 
+    padding: 0 10px; 
+    margin: 10px 0;
+}
+input[type="radio"] {
+    border: none;
+}
+.radio{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
